Fixed misnamed partials. Now adding new characters works correctly.

--- a/app/views/characters/new.js.erb
+++ b/app/views/characters/new.js.erb
@@ -1,1 +1,1 @@
-$(".new_character").html("<%= escape_javascript(render partial: 'new', locals: {character: @character}) %>");
+$(".new_character").html("<%= escape_javascript(render partial: 'characters/new', locals: {character: @character}) %>");
