--- a/app/views/characters/_new.html.erb
+++ b/app/views/characters/_new.html.erb
@@ -1,5 +1,5 @@
-<h2 class="name"><%= character.name %></h2>
-<p class="bio"><%= character.bio %></p>
-<%= link_to(edit_character_path(character), remote: true) do%>
-    <%= button_to "Edit" %>
+<%= form_for(character, remote: true) do |f| %>
+	<%= f.text_field(:name, value: character.name) %>
+	<%= f.text_field(:bio, value: character.bio) %>
+	<%= f.submit("Submit Changes") %>
 <% end %>
