--- a/app/views/characters/_new.html.erb
+++ b/app/views/characters/_new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(character, remote: true) do |f| %>
-	<%= f.text_field(:name, value: character.name) %>
-	<%= f.text_field(:bio, value: character.bio) %>
-	<%= f.submit("Submit Changes") %>
+	<%= f.text_field(:name, placeholder: "Name",) %>
+	<%= f.text_field(:bio, placeholder: "Bio") %>
+	<%= f.submit("Create Character") %>
 <% end %>
