Added edit toggle, changed new character form, added tags to character json format.

--- a/app/views/characters/_character_info.html.erb
+++ b/app/views/characters/_character_info.html.erb
@@ -1,5 +1,7 @@
 <h2 class="name"><%= character.name %></h2>
 <p class="bio"><%= character.bio %></p>
+<div class="edit-button">
 <%= link_to(edit_character_path(character), remote: true) do%>
     <%= button_to "Edit" %>
 <% end %>
+</div>
