--- a/app/views/characters/create.js.erb
+++ b/app/views/characters/create.js.erb
@@ -1,2 +1,7 @@
 $(".list").html("<%= escape_javascript(render partial: 'list', locals: {:characters => Character.all } )%>");
 $(".new_character").html('');
+$(".background").css({"-webkit-filter": "blur(0px)",
+    "-moz-filter": "blur(0px)",
+    "-o-filter": "blur(0px)",
+    "-ms-filter": "blur(0px)",
+    "filter" : "blur(0px)"});
