--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -31,7 +31,6 @@ a:hover {
 	font-size:10px;
 }
 
-
 .topbar {
     background-color: #444;
     width: 100%;
@@ -52,9 +51,15 @@ a:hover {
     -webkit-box-sizing: border-box;
 }
 
-.new_character{
+.edit-topbar {
+	color:white;
 	display:inline;
 	float:right;
+	margin-right:10px;
+}
+
+.edit-topbar:hover {
+	color:#ddd;
 }
 
 .plus {
@@ -178,4 +183,46 @@ a:hover {
 
 .edit ul.tags li.new {
     height: 35px;
+}
+
+.new_character_box{
+	position:fixed;
+	left:50%;
+	top:50%;
+	margin-left:-200px;
+	margin-top:-110px;
+	z-index:1000000020;
+	width:400px;
+	height:220px;
+    background-color: #444;
+    text-align:center;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+}
+
+.background {
+	position:fixed;
+    z-index:100;
+	width:100%;
+	height:100%;
+	-webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.new_character_name{
+	padding-top:5px;
+	padding-bottom:5px;
+	width:100%;
+	background-color:#222;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.4);
+}
+
+.new_character_bio{
+	margin-top:10px;
 }
