--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -3,9 +3,11 @@
 
     <% character.tags.each do |t| %>
     <li class="<%= t.key %>" style="display:inline-block;"><%= t.key << ": " << t.value %>
+    <div class="edit-button", style="display:inline-block;">
     <%= link_to(edit_tag_path(t), remote: true, style: "display:inline-block;") do %>
     <p class="edit-link">Edit</p>
     <% end %>
+    </div>
     </li>
     <% end %>
 <% else %>
