--- a/app/views/characters/new.js.erb
+++ b/app/views/characters/new.js.erb
@@ -1,1 +1,6 @@
 $(".new_character").html("<%= escape_javascript(render partial: 'characters/new', locals: {character: @character}) %>");
+$(".background").css({"-webkit-filter": "blur(5px)",
+    "-moz-filter": "blur(5px)",
+    "-o-filter": "blur(5px)",
+    "-ms-filter": "blur(5px)",
+    "filter" : "blur(5px)"});
