--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -5,8 +5,28 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100% !important;
+    height: 100%;
     background-color: #333;
+}
+
+@mixin borderbox {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+@mixin shadow($shadow...) {
+    box-shadow: $shadow;
+    -moz-box-shadow: $shadow;
+    -webkit-box-shadow: $shadow;
+}
+
+@mixin blur($radius) {
+    -webkit-filter: blur($radius);
+    -moz-filter: blur($radius);
+    -o-filter: blur($radius);
+    -ms-filter: blur($radius);
+    filter: blur($radius);
 }
 
 #container{	
@@ -43,12 +63,8 @@ a:hover {
 	z-index: 9999;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 16px 16px -16px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 0 16px 16px -16px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 0 16px 16px -16px rgba(0, 0, 0, 0.4);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    @include shadow(0 16px 16px -16px rgba(0, 0, 0, 0.4));
+    @include borderbox;
 }
 
 .edit-topbar {
@@ -63,12 +79,12 @@ a:hover {
 }
 
 .plus {
-	color:white !important;
+	color:white;
 	display:inline;
 }
 
 .plus:hover {
-    color: #ddd !important;
+    color: #ddd;
 }
 
 .main {
@@ -78,9 +94,7 @@ a:hover {
     padding-top: 40px;
     position: relative;
 
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    @include borderbox;
 }
 
 .list {
@@ -90,9 +104,7 @@ a:hover {
     width: 200px;
 	height:auto;
 	min-height:100%;
-    box-shadow: -2px 0 6px rgba(0, 0, 0, 0.2) inset, 0 8px 8px -8px rgba(0, 0, 0, 0.3) inset;
-    -moz-box-shadow: -2px 0 6px rgba(0, 0, 0, 0.2) inset, 0 8px 8px -8px rgba(0, 0, 0, 0.3) inset;
-    -webkit-box-shadow: -2px 0 6px rgba(0, 0, 0, 0.2) inset, 0 8px 8px -8px rgba(0, 0, 0, 0.3) inset;
+    @include shadow(-2px 0 6px rgba(0, 0, 0, 0.2) inset, 0 8px 8px -8px rgba(0, 0, 0, 0.3) inset);
 }
 
 .list ul {
@@ -109,27 +121,8 @@ a:hover {
     padding-left: 12px;
     color: #fff;
     font-size: 20px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-
-.list li.null-text{
-    border: 0;
-    box-shadow: 0 0 0 0;
-    -moz-box-shadow: 0 0 0 0 ;
-    -webkit-box-shadow: 0 0 0 0;
-}
-
-.list li.null-text:hover{
-	color:white;
-}
-
-.list li:first-child {
-    border-top: none;
+    @include shadow(0 0 4px rgba(0, 0, 0, 0.2));
+    @include borderbox;
 }
 
 .list li:hover {
@@ -137,7 +130,6 @@ a:hover {
 }
 
 .edit {
-
 	width:auto;
 	height:auto;
 	min-height:100%;
@@ -148,9 +140,7 @@ a:hover {
     padding: 40px;
     padding-top: 20px;
     color: white;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    @include borderbox;
 }
 
 .edit ul.tags {
@@ -165,13 +155,9 @@ a:hover {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-top: 5px;
     padding-left: 12px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+    @include shadow(0 0 4px rgba(0, 0, 0, 0.2));
     height: 30px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    @include borderbox;
 }
 
 .edit ul.tags li:first-child {
@@ -182,47 +168,95 @@ a:hover {
 }
 
 .edit ul.tags li.new {
-    height: 35px;
+    padding-top: 3px;
+    height: 30px;
 }
 
 .new_character_box{
 	position:fixed;
 	left:50%;
 	top:50%;
-	margin-left:-200px;
-	margin-top:-110px;
+	margin-left:-250px;
+	margin-top:-125px;
 	z-index:1000000020;
-	width:400px;
-	height:220px;
+    padding: 10px;
+	width:500px;
+	height:250px;
     background-color: #444;
     text-align:center;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+    @include shadow(0 0 16px rgba(0, 0, 0, 0.4));
+    border-radius: 10px;
+    color: white;
 }
 
 .background {
 	position:fixed;
+    background: rgba(0, 0, 0, 0.5);
     z-index:100;
 	width:100%;
 	height:100%;
-	-webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+	transition: .5s;
 }
 
-.new_character_name{
-	padding-top:5px;
-	padding-bottom:5px;
-	width:100%;
-	background-color:#222;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.4);
+input[type="text"]{
+    padding: 0 6px;
 }
 
-.new_character_bio{
-	margin-top:10px;
+input[type="text"],
+input[type="submit"],
+button {
+  height: 22px;
+  background-color: #fff;
+  border-radius: 8px;
+  border: none;
+  color:#000;
+  text-decoration:none;
+  @include borderbox;
+}
+
+textarea {
+    border-radius: 8px;
+    padding: 4px;
+    resize: none; 
+    @include borderbox;
+}
+
+.new_character_bio {
+    margin-top: 8px;
+    margin-bottom: 12px;
+    width: 100%;
+    // Don't allow resizing
+    min-width: 100%;
+    max-width: 100%;
+    line-height: 12px;
+    height: 160px;
+    min-height: 160px;
+    max-height: 160px;
+}
+
+.new_character_name {
+    margin-top: 4px;
+    width: 100%;
+}
+
+input[type=text],
+input[type="submit"],
+input[type="button"],
+button,
+textarea {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  border: 1px solid #fff;
+}
+ 
+input[type=text]:focus,
+input[type="submit"]:focus,
+input[type="button"]:focus,
+button:focus,
+textarea:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 1);
 }
