--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -202,17 +202,17 @@ input[type="text"]{
     padding: 0 6px;
 }
 
-input[type="text"],
-input[type="submit"],
-button {
-  height: 22px;
-  background-color: #fff;
-  border-radius: 8px;
-  border: none;
-  color:#000;
-  text-decoration:none;
-  @include borderbox;
-}
+// input[type="text"],
+// input[type="submit"],
+// button {
+//   height: 22px;
+//   background-color: #fff;
+//   border-radius: 8px;
+//   border: none;
+//   color:#000;
+//   text-decoration:none;
+//   @include borderbox;
+// }
 
 textarea {
     border-radius: 8px;
@@ -239,24 +239,24 @@ textarea {
     width: 100%;
 }
 
-input[type=text],
-input[type="submit"],
-input[type="button"],
-button,
-textarea {
-  -webkit-transition: all 0.30s ease-in-out;
-  -moz-transition: all 0.30s ease-in-out;
-  -ms-transition: all 0.30s ease-in-out;
-  -o-transition: all 0.30s ease-in-out;
-  outline: none;
-  border: 1px solid #fff;
-}
+// input[type=text],
+// input[type="submit"],
+// input[type="button"],
+// button,
+// textarea {
+//   -webkit-transition: all 0.30s ease-in-out;
+//   -moz-transition: all 0.30s ease-in-out;
+//   -ms-transition: all 0.30s ease-in-out;
+//   -o-transition: all 0.30s ease-in-out;
+//   outline: none;
+//   border: 1px solid #fff;
+// }
  
-input[type=text]:focus,
-input[type="submit"]:focus,
-input[type="button"]:focus,
-button:focus,
-textarea:focus {
-  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-  border: 1px solid rgba(81, 203, 238, 1);
-}
+// input[type=text]:focus,
+// input[type="submit"]:focus,
+// input[type="button"]:focus,
+// button:focus,
+// textarea:focus {
+//   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+//   border: 1px solid rgba(81, 203, 238, 1);
+// }
