--- a/app/views/characters/update.js.erb
+++ b/app/views/characters/update.js.erb
@@ -1,2 +1,4 @@
  $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new }) %>");
  $(".list").html("<%= escape_javascript(render partial: 'list', locals: {:characters => Character.all } )%>");
+ $(".show_character_div").hide();
+ $(".edit_character_div").show();
