--- a/app/views/characters/show.js.erb
+++ b/app/views/characters/show.js.erb
@@ -1,1 +1,4 @@
  $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new }) %>");
+ $(".edit-button").toggle();
+ $(".show_character_div").show();
+ $(".edit_character_div").hide();
