--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -2,12 +2,14 @@
 <% if character.tags.count != 0 %>
 
     <% character.tags.each do |t| %>
-    <li name="<%= t.key %>" style="display:inline-block;"><%= t.key << ": " << t.value %>
+    <li name="tag_<%= t.id %>" style="display:inline-block;"><%= t.key << ": " << t.value %>
+    <% if edit %>
     <div class="edit-button", style="display:inline-block;">
     <%= link_to(edit_tag_path(t), remote: true, style: "display:inline-block;") do %>
     <p class="edit-link">Edit</p>
     <% end %>
     </div>
+    <% end %>
     </li>
     <% end %>
 <% else %>
