--- a/app/views/tags/create.js.erb
+++ b/app/views/tags/create.js.erb
@@ -1,1 +1,1 @@
-$(".edit").html("<%= escape_javascript(render partial: 'characters/edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new }) %>");
+$(".tags").html("<%= escape_javascript(render partial: 'characters/tags', locals: {:character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => nil}) %>");
