--- a/app/views/tags/update.js.erb
+++ b/app/views/tags/update.js.erb
@@ -1,1 +1,1 @@
-$(".tags").html("<%= escape_javascript(render partial: 'characters/tags', locals: {:character => Character.find(cookies[:character_id]), :tag => Tag.new }) %>");
+$(".tags").html("<%= escape_javascript(render partial: 'characters/tags', locals: {:character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => true}) %>");
