--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -229,20 +229,7 @@ textarea {
     resize: none; 
 }
 
-.new_character_bio {
-    margin-top: 8px;
-    margin-bottom: 12px;
-    width: 80%;
-    // Don't allow resizing
-    min-width: 80%;
-    max-width: 80%;
-    line-height: 12px;
-    height: 160px;
-    min-height: 160px;
-    max-height: 160px;
-}
-
-.new_character_name {
+#new_character_name {
     margin-top: 4px;
     width: 80%;
     margin:auto;
@@ -258,6 +245,32 @@ textarea {
     margin-left:-100px;
     text-align:center;
     background-color:white;
+}
+
+input#character_name {
+    width: 200px;
+    font: 1.5em serif bold;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+}
+
+textarea#character_bio {
+    width: 100%;
+    height: 150px;
+    font: 1em serif;
+}
+
+#new_character_bio {
+    margin-top: 8px;
+    margin-bottom: 12px;
+    width: 80%;
+    // Don't allow resizing
+    min-width: 80%;
+    max-width: 80%;
+    line-height: 12px;
+    height: 160px;
+    min-height: 160px;
+    max-height: 160px;
 }
 
 // input[type=text],
@@ -281,3 +294,8 @@ textarea {
 //   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
 //   border: 1px solid rgba(81, 203, 238, 1);
 // }
+
+#how-to-cancel {
+    margin-top: 10px;
+    color: #303030;
+}
