--- a/app/views/characters/_character_info.html.erb
+++ b/app/views/characters/_character_info.html.erb
@@ -7,7 +7,7 @@
 <% if edit %>
 <%= form_for(character, remote: true) do |f| %>
 	<%= f.text_field(:name, value: character.name) %><br>
-	<%= f.text_area(:bio, value: character.bio, cols:"20", rows:"5") %><br>
+	<%= f.text_area(:bio, value: character.bio) %><br>
 	<%= f.submit("Submit Changes") %>
 <% end %>
 <% end %>
