--- a/app/views/characters/_new.html.erb
+++ b/app/views/characters/_new.html.erb
@@ -1,10 +1,9 @@
 <div class="new_character_box">
     New Character
     <%= form_for(character, remote: true) do |f| %>
-    	<div class="new_character_name">
-    	<%= f.text_field(:name, placeholder: "Name", class:"new_character_name") %><br>
-    	</div>
-    	<%= f.text_area(:bio, placeholder: "Bio", class:"new_character_bio") %><br>
+    	<%= f.text_field(:name, placeholder: "Name", id:"new_character_name") %><br>
+    	<%= f.text_area(:bio, placeholder: "Bio", id:"new_character_bio") %><br>
     	<%= f.submit("Create Character") %>
     <% end %>
+    <div id="how-to-cancel"> Click outside to cancel</div>
 </div>
