--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -299,3 +299,8 @@ textarea#character_bio {
     margin-top: 10px;
     color: #303030;
 }
+
+// Webkit hardware acceleration hack
+*:not(html) {
+    -webkit-transform: translate3d(0, 0, 0);
+}
