--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -248,6 +248,10 @@ textarea {
     margin:auto;
 }
 
+.inline-tags{
+    display:inline-block;
+}
+
 #notice {
     position:fixed;
     height:100px;
