--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -2,13 +2,13 @@
 <% if character.tags.count != 0 %>
 
     <% character.tags.each do |t| %>
-    <li name="tag_<%= t.id %>" class="inline-tags;"><%= t.key << ": " << t.value %>
+    <li name="tag_<%= t.id %>" class="inline-tags"><%= t.key << ": " << t.value %>
     <% if edit %>
-    <div class="edit-button"  class="inline-tags;">
-    <%= link_to(edit_tag_path(t), remote: true, class:"inline-tags;") do %>
-    <p class="edit-link">Edit</p>
-    <% end %>
+    <div class="edit-button inline-tags">
+    <%= link_to(edit_tag_path(t), remote: true) do %>
+    <span class="edit-link inline-tags">Edit</span>
     </div>
+    <% end %>
     <% end %>
     </li>
     <% end %>
