Fixed #3 New characters are immediately placed in the viewer.

--- a/app/views/characters/create.js.erb
+++ b/app/views/characters/create.js.erb
@@ -1,5 +1,6 @@
 $(".list").html("<%= escape_javascript(render partial: 'list', locals: {:characters => Character.all } )%>");
 $(".new_character").html('');
+$(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => @character, :tag => Tag.new, :edit => nil }) %>");
 $(".background").css({"-webkit-filter": "blur(0px)",
     "-moz-filter": "blur(0px)",
     "-o-filter": "blur(0px)",
