--- a/app/views/characters/new.js.erb
+++ b/app/views/characters/new.js.erb
@@ -1,6 +1,2 @@
-$(".background").css({"-webkit-filter": "blur(1px) brightness(0.2)",
-    "-moz-filter": "blur(1px) brightness(0.2)",
-    "-o-filter": "blur(1px) brightness(0.2)",
-    "-ms-filter": "blur(1px) brightness(0.2)",
-    "filter" : "blur(1px) brightness(0.2)"});
+$(".background").css("opacity", "0.2");
 $(".new_character").html("<%= escape_javascript(render partial: 'characters/new', locals: {character: @character}) %>");
