--- a/app/views/characters/_edit.html.erb
+++ b/app/views/characters/_edit.html.erb
@@ -2,7 +2,9 @@
         <div class="character_info">
         <%= render partial: "characters/character_info", locals: {:character => character, :edit => edit} %>
         </div>
-        <ul class="tags">
+        <div id="tags">
+
         <%= render partial: "characters/tags", locals: {:character => character, :tag => tag,:edit => edit} %>
-        </ul>
+
+        </div>
     <% end %>
