--- a/app/views/characters/set_view.js.erb
+++ b/app/views/characters/set_view.js.erb
@@ -1,3 +1,4 @@
  $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => nil }) %>");
   $(".edit-topbar").html('');
  $(".edit-topbar").html("<%= escape_javascript(render partial: 'layouts/edit_button', locals: {:character => Character.find(cookies[:character_id])})%>");
+  $("#new-tag-location").html('')
