Changed formatting for tags to "Of type" rather than "Child" to accomodate insert div for new tag form. Fixes #15 Makes new tag form persistent through ajax requests.

--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -170,10 +170,10 @@ a:hover {
     @include borderbox;
 }
 
-.edit ul.tags li:first-child {
+.edit ul.tags li:first-of-type {
     border-radius: 6px 6px 0 0;
 }
-.edit ul.tags li:last-child {
+.edit ul.tags li:last-of-type {
     border-radius: 0 0 6px 6px;
 }
 .edit ul.tags li:only-of-type {
