--- a/app/views/characters/_new.html.erb
+++ b/app/views/characters/_new.html.erb
@@ -1,9 +1,16 @@
 <div class="new_character_box">
-    New Character
     <%= form_for(character, remote: true) do |f| %>
-    	<%= f.text_field(:name, placeholder: "Name", id:"new_character_name") %><br>
-    	<%= f.text_area(:bio, placeholder: "Bio", id:"new_character_bio") %><br>
-    	<%= f.submit("Create Character") %>
+        <span id="new_character_labels">
+        <%= f.label(:name, id:"character_name_label") %>:<br>
+        <%= f.label(:bio, id:"character_bio_label") %>:<br>
+        <%= f.submit("Submit", id:"character_submit")%><br>
+        </span>
+        <span id="new_character_fields">
+        <div id="new_character_heading">New Character</div>
+        <%= f.text_field(:name, value: character.name) %><br>
+        <%= f.text_area(:bio, value: character.bio) %><br>
+        </span>
+        
     <% end %>
     <div id="how-to-cancel"> Click outside to cancel</div>
 </div>
