--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -312,6 +312,6 @@ textarea#character_bio {
 }
 
 // Webkit hardware acceleration hack
-*:not(html) {
+.background {
     -webkit-transform: translate3d(0, 0, 0);
 }
