--- a/app/views/characters/show.js.erb
+++ b/app/views/characters/show.js.erb
@@ -1,2 +1,2 @@
- $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => nil }) %>");
- $(".edit-topbar").html("<%= escape_javascript(render partial: 'layouts/edit_button', locals: {:character => Character.find(cookies[:character_id])})%>");
+ $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => current_character, :tag => Tag.new, :edit => nil }) %>");
+ $(".edit-topbar").html("<%= escape_javascript(render partial: 'layouts/edit_button', locals: {:character => current_character})%>");
