--- a/app/views/characters/update.js.erb
+++ b/app/views/characters/update.js.erb
@@ -1,2 +1,2 @@
- $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => true}) %>");
+ $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => current_character, :tag => Tag.new, :edit => true}) %>");
  $(".list").html("<%= escape_javascript(render partial: 'list', locals: {:characters => Character.all } )%>");
