--- a/app/views/characters/set_edit.js.erb
+++ b/app/views/characters/set_edit.js.erb
@@ -1,3 +1,3 @@
- $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => Character.find(cookies[:character_id]), :tag => Tag.new, :edit => true }) %>");
- $(".edit-topbar").html("<%= escape_javascript(render partial: 'layouts/view_button', locals: {:character => Character.find(cookies[:character_id])})%>");
+ $(".edit").html("<%= escape_javascript(render partial: 'edit', locals: { :character => current_character, :tag => Tag.new, :edit => true }) %>");
+ $(".edit-topbar").html("<%= escape_javascript(render partial: 'layouts/view_button', locals: {:character => current_character})%>");
  $("#new-tag-location").replaceWith($("#new-tag-content").html());
