Fixes #18 Makes callback for tag creation render into #tags, not .tags.

--- a/app/views/tags/create.js.erb
+++ b/app/views/tags/create.js.erb
@@ -1,1 +1,1 @@
-$(".tags").html("<%= escape_javascript(render partial: 'characters/tags', locals: {:character => current_character, :tag => Tag.new, :edit => true}) %>");
+$("#tags").html("<%= escape_javascript(render partial: 'characters/tags', locals: {:character => current_character, :tag => Tag.new, :edit => true}) %>");
