--- a/app/views/layouts/_edit_button.html.erb
+++ b/app/views/layouts/_edit_button.html.erb
@@ -1,1 +1,2 @@
-<%= link_to(set_edit_path(character.id), remote: true) do %><div class="edit-value">Edit</div><% end %>
+
+<%= link_to(set_edit_path(character.id || 0), remote: true) do %><div class="edit-value">Edit</div><% end %>
