Added depth to tags, currently depth on webpage created tags is automatically zero. Fixed callback on tag update. Fixes #21 Fixes #22

--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -36,6 +36,7 @@ $(document).ready(function(){
         <%= t.text_field(:key, placeholder: "Category") %>
         <%= t.text_field(:value, placeholder: "Value") %>
         <%= t.hidden_field(:character_id, value: character.id) %>
+        <%= t.hidden_field(:depth, value: 0) %>
         <%= t.submit %>
     <% end %>
     </li>
