--- a/app/views/characters/_character_info.html.erb
+++ b/app/views/characters/_character_info.html.erb
@@ -2,12 +2,46 @@
 <div class="show_character_div">
 <h2 class="name"><%= character.name %></h2>
 <p class="bio"><%= character.bio %></p>
+<p class="abilities"> Health: <%= character.health %>, Deviation: <%= character.health_sigma%></p> |
+<p class="abilities"> Strength: <%= character.strength %>, Deviation: <%= character.strength_sigma%></p> |
+<p class="abilities"> Dexterity: <%= character.dexterity %>, Deviation: <%= character.dexterity_sigma%></p> |
+<p class="abilities"> Constitution: <%= character.constitution %>, Deviation: <%= character.constitution_sigma%></p> |
+<p class="abilities"> Intelligence: <%= character.intelligence %>, Deviation: <%= character.intelligence_sigma%></p> |
+<p class="abilities"> Wisdom: <%= character.wisdom %>, Deviation: <%= character.wisdom_sigma%></p> |
+<p class="abilities"> Charisma: <%= character.charisma %>, Deviation: <%= character.charisma_sigma%></p> 
 </div>
 <% end %>
 <% if edit %>
 <%= form_for(character, remote: true) do |f| %>
 	<%= f.text_field(:name, value: character.name) %><br>
 	<%= f.text_area(:bio, value: character.bio) %><br>
+	<div id="ability_labels_container">
+	<%= f.label(:health) %> |
+	<%= f.label(:strength) %> |
+	<%= f.label(:dexterity) %> |
+	<%= f.label(:constitution) %> |
+	<%= f.label(:intelligence) %> |
+	<%= f.label(:wisdom) %> |
+	<%= f.label(:charisma) %><br>
+	</div>
+	<div id="abilities_container">
+	Base: &nbsp
+	<%= f.number_field(:health, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:strength, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:dexterity, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:constitution, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:intelligence, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:wisdom, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:charisma, step: 1, class:"abilities_field") %><br>
+	Sigma: 
+	<%= f.number_field(:health_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:strength_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:dexterity_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:constitution_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:intelligence_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:wisdom_sigma, step: 1, class:"abilities_field") %>
+	<%= f.number_field(:charisma_sigma, step: 1, class:"abilities_field") %><br>
 	<%= f.submit("Submit Changes") %>
+	</div>
 <% end %>
 <% end %>
