Default values on abilities are now 0. Fixes #27 Uses sigma rather than deviation. Fixes #26

--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -187,7 +187,13 @@ a:hover {
 
 .abilities{
     display:inline-block;
-    font-size:10px;
+    font-size:15px;
+}
+
+div.row_labels {
+    width:40px;
+    display:inline-block;
+
 }
 
 #abilities_container{
